ELS Code/main/default/objects/Raw_Membership__c/Raw_Membership__c.object-meta.xml
<CustomObject>
    <label>Raw Membership</label>
    <nameField>
        <label>Raw Membership Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Raw Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>