ELS Code/main/default/objects/Raw_Membership__c/fields/Co_Applicant_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Email_Address__c</fullName>
    <label>Co-Applicant Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>