ELS Code/main/default/objects/Raw_Membership__c/fields/Date_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Date_Cancelled__c</fullName>
    <label>Date Cancelled</label>
    <type>Date</type>
</CustomField>