ELS Code/main/default/objects/Raw_Membership__c/fields/Free_Membership_Trial_activation_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Free_Membership_Trial_activation_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Membership Trial activation? (Y/N</label>
    <type>Checkbox</type>
</CustomField>