ELS Code/main/default/objects/Raw_Membership__c/fields/NE_Zone__c.field-meta.xml
<CustomField>
    <fullName>NE_Zone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NE Zone</label>
    <type>Checkbox</type>
</CustomField>