ELS Code/main/default/objects/Raw_Membership__c/fields/NW_Zone__c.field-meta.xml
<CustomField>
    <fullName>NW_Zone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NW Zone</label>
    <type>Checkbox</type>
</CustomField>