ELS Code/main/default/objects/Raw_Membership__c/fields/SW_Zone__c.field-meta.xml
<CustomField>
    <fullName>SW_Zone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SW Zone</label>
    <type>Checkbox</type>
</CustomField>